[package]
name = "iron_shell"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.1.1"
eframe = "0.34.3"
raw-window-handle = "0.6"
rustyline = "18.0.0"
sysinfo = "0.39.5"
window-vibrancy = "0.7.1"
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
